margin right toogle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@
     --white: #FFFFFF;
 }
 
-
 *{
     margin: 0;
     padding: 0;
@@ -98,6 +97,9 @@ hr {
 .nav-toggle{
     display: block;
 
+}
+#im-toogle{
+    margin-right: 18px;
 }
 
 .div-circle{
